@@ -27,6 +27,7 @@ vorbis-tools 1.3.0 -- Unreleased
  * oggenc: fixed the encoding of extended characters in Windows (#268)
  * oggenc: validate raw UTF-8 sent to oggenc (#268)
  * oggenc: include the PID in the RNG seed to get a unique serial (#1432)
+ * oggenc: lyrics support using .lrc as source; requires libkate (#1403)
  * ogginfo: support for information in Kate streams (#1360)
  * vcut: 64 bit fixes (#1366)
  * vorbiscomment: correct memory allocation (#472)
